--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.31", features = ["derive"] }
+walkdir = "2.5.0"
+home = "0.5.11"
